Integración de Ideario
Se integró el Ideario Institucional

--- a/index.html
+++ b/index.html
@@ -58,14 +58,68 @@
     <section class="container-ideario">
         <div class="slider-wrapper">
             <div class="slider">
-                <img id="slide-1" src="ideario/222.jpeg" alt="img222">
-                <img id="slide-2" src="ideario/223.jpeg" alt="img223">
-                <img id="slide-3" src="ideario/224.jpeg" alt="img224">
+                <img id="slide-1" src="ideario/1.jpg" alt="img1">
+                <img id="slide-2" src="ideario/2.jpg" alt="img2">
+                <img id="slide-3" src="ideario/3.jpg" alt="img3">
+                <img id="slide-4" src="ideario/4.jpg" alt="img4">
+                <img id="slide-5" src="ideario/5.jpg" alt="img5">
+                <img id="slide-6" src="ideario/6.jpg" alt="img6">
+                <img id="slide-7" src="ideario/7.jpg" alt="img7">
+                <img id="slide-8" src="ideario/8.jpg" alt="img8">
+                <img id="slide-9" src="ideario/9.jpg" alt="img9">
+                <img id="slide-10" src="ideario/10.jpg" alt="img10">
+                <img id="slide-11" src="ideario/11.jpg" alt="img11">
+                <img id="slide-12" src="ideario/12.jpg" alt="img12">
+                <img id="slide-13" src="ideario/13.jpg" alt="img13">
+                <img id="slide-14" src="ideario/14.jpg" alt="img14">
+                <img id="slide-15" src="ideario/15.jpg" alt="img15">
+                <img id="slide-16" src="ideario/16.jpg" alt="img16">
+                <img id="slide-17" src="ideario/17.jpg" alt="img17">
+                <img id="slide-18" src="ideario/18.jpg" alt="img18">
+                <img id="slide-19" src="ideario/19.jpg" alt="img19">
+                <img id="slide-20" src="ideario/20.jpg" alt="img20">
+                <img id="slide-21" src="ideario/21.jpg" alt="img21">
+                <img id="slide-22" src="ideario/22.jpg" alt="img22">
+                <img id="slide-23" src="ideario/23.jpg" alt="img23">
+                <img id="slide-24" src="ideario/24.jpg" alt="img24">
+                <img id="slide-25" src="ideario/25.jpg" alt="img25">
+                <img id="slide-26" src="ideario/26.jpg" alt="img26">
+                <img id="slide-27" src="ideario/27.jpg" alt="img27">
+                <img id="slide-28" src="ideario/28.jpg" alt="img28">
+                <img id="slide-29" src="ideario/29.jpg" alt="img29">
+                <img id="slide-30" src="ideario/30.jpg" alt="img30">
             </div>
             <div class="slider-nav">
                 <a href="#slide-1"></a>
                 <a href="#slide-2"></a>
                 <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
+                <a href="#slide-5"></a>
+                <a href="#slide-6"></a>
+                <a href="#slide-7"></a>
+                <a href="#slide-8"></a>
+                <a href="#slide-9"></a>
+                <a href="#slide-10"></a>
+                <a href="#slide-11"></a>
+                <a href="#slide-12"></a>
+                <a href="#slide-13"></a>
+                <a href="#slide-14"></a>
+                <a href="#slide-15"></a>
+                <a href="#slide-16"></a>
+                <a href="#slide-17"></a>
+                <a href="#slide-18"></a>
+                <a href="#slide-19"></a>
+                <a href="#slide-20"></a>
+                <a href="#slide-21"></a>
+                <a href="#slide-22"></a>
+                <a href="#slide-23"></a>
+                <a href="#slide-24"></a>
+                <a href="#slide-25"></a>
+                <a href="#slide-26"></a>
+                <a href="#slide-27"></a>
+                <a href="#slide-28"></a>
+                <a href="#slide-29"></a>
+                <a href="#slide-30"></a>
             </div>
         </div>
     </section>
